--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "web-vitals"
-: "^2.1.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "NODE_ENV=production node_modules/react-scripts/bin/react-scripts.js start",
-    "build": "react-scripts build",
+    "build": "NODE_ENV=production node_modules/react-scripts/bin/react-scripts.js build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
